# grass-spider

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/spider/: __main__.py  agent.py  loader.py  settings.py
src/spider/resources/: google-scholar.yaml
