[build-system]

requires = ["hatchling"]

build-backend = "hatchling.build"


[project]

name = "grass-spider"

version = "1.1a1"

description = ""


license = "MIT"

requires-python = ">= 3.10"

dependencies = [
     "playwright",
     'pytest'
    #  'pydantic',
    #  'pyyaml'
]

[project.scripts]
spider = "spider.__main__:main"

# authors = [
#     {name = "Yomi Sosanya", email = "perchingeagle@gmail.com"}
# ]

[tool.hatch.build.targets.wheel]
packages = ["src/spider"]


